--- a/style.css
+++ b/style.css
@@ -1,7 +1,9 @@
 nav li {
   display: inline;
   color: #f8f2d8;
-  padding-top: 50px;
+  padding: 50px;
+  font-family: "Times New Roman", Times, serif;
+  font-size: 20px;
 }
 
 .header {
