contact us and about us

--- a/styles.css
+++ b/styles.css
@@ -8,7 +8,7 @@ nav li {
 
 .header {
   height: 50px;
-  background-color: #6e0001;
+  background-color: #dd855c;
   list-style-type: none;
   overflow: hidden;
 }
@@ -30,4 +30,78 @@ nav li {
 
 nav li .links:hover {
   color: white;
+}
+
+h1 {
+  color: #dd855c;
+}
+
+h2 {
+  color: #dd855c;
+}
+
+h3 {
+  color: #b08a8a;
+}
+
+input[type=text] {
+    padding:5px;
+    border:2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+textarea {
+    padding:5px;
+    border:2px solid #ccc;
+    -webkit-border-radius: 5px;
+    border-radius: 5px;
+}
+
+input[type=text]:focus {
+    border-color:#333;
+}
+
+input[type=submit] {
+  padding:5px 15px;
+  background: #dd855c;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 225px;
+  height: 50px;
+}
+
+input[type=submit]:hover {
+  padding:5px 15px;
+  background: #b08a8a;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 225px;
+  height: 50px;
+}
+
+input[type=button] {
+  padding:5px 15px;
+  background: #dd855c;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 225px;
+  height: 50px;
+}
+
+input[type=button]:hover {
+  padding:5px 15px;
+  background: #b08a8a;
+  border:0 none;
+  cursor:pointer;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 225px;
+  height: 50px;
 }
