--- a/styles.css
+++ b/styles.css
@@ -45,21 +45,21 @@ h3 {
 }
 
 input[type=text] {
-    padding:5px;
-    border:2px solid #ccc;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
+  padding:5px;
+  border:2px solid #ccc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
 }
 
 textarea {
-    padding:5px;
-    border:2px solid #ccc;
-    -webkit-border-radius: 5px;
-    border-radius: 5px;
+  padding:5px;
+  border:2px solid #ccc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
 }
 
 input[type=text]:focus {
-    border-color:#333;
+  border-color: #333;
 }
 
 input[type=submit] {
@@ -104,4 +104,17 @@ input[type=button]:hover {
   border-radius: 5px;
   width: 225px;
   height: 50px;
+}
+
+input[type=number] {
+  padding:5px;
+  border:2px solid #ccc;
+  -webkit-border-radius: 5px;
+  border-radius: 5px;
+  width: 212px;
+}
+
+.poza {
+  border-radius: 10px;
+  border-color: white;
 }
