--- a/styles.css
+++ b/styles.css
@@ -18,11 +18,6 @@ nav li {
   height: 1045px;
 }
 
-.img-recipe {
-  padding-left: 10px;
-  padding-right: 10px;
-}
-
 .links {
   text-decoration: none;
   color: #f9f2e9;
@@ -47,14 +42,12 @@ h3 {
 input[type=text] {
   padding:5px;
   border:2px solid #ccc;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
 }
 
 textarea {
   padding:5px;
   border:2px solid #ccc;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
 }
 
@@ -67,7 +60,6 @@ input[type=submit] {
   background: #dd855c;
   border:0 none;
   cursor:pointer;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
   width: 225px;
   height: 50px;
@@ -78,7 +70,6 @@ input[type=submit]:hover {
   background: #b08a8a;
   border:0 none;
   cursor:pointer;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
   width: 225px;
   height: 50px;
@@ -89,7 +80,6 @@ input[type=button] {
   background: #dd855c;
   border:0 none;
   cursor:pointer;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
   width: 225px;
   height: 50px;
@@ -100,7 +90,6 @@ input[type=button]:hover {
   background: #b08a8a;
   border:0 none;
   cursor:pointer;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
   width: 225px;
   height: 50px;
@@ -109,7 +98,6 @@ input[type=button]:hover {
 input[type=number] {
   padding:5px;
   border:2px solid #ccc;
-  -webkit-border-radius: 5px;
   border-radius: 5px;
   width: 212px;
 }
@@ -117,4 +105,30 @@ input[type=number] {
 .poza {
   border-radius: 10px;
   border-color: white;
+}
+
+.flip {
+  transform: scaleX(-1);
+  padding-left: 10px;
+  padding-right: 10px;
+  float: left;
+}
+
+.normal {
+  padding-left: 10px;
+  padding-right: 10px;
+  float: right;
+}
+
+.inline-recipe {
+  display: inline;
+}
+
+hr {
+  border-color: #dd855c;
+  background-color: #dd855c;
+}
+
+a {
+  text-decoration: none;
 }
